--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,31 @@
-py~=1.9.0
-colorama~=0.4.4
-pip~=20.1.1
-attrs~=20.2.0
-pymongo~=3.11.0
-toml~=0.10.1
-Jinja2~=2.11.2
-Werkzeug~=1.0.1
-itsdangerous~=1.1.0
-click~=7.1.2
-MarkupSafe~=1.1.1
-pytest~=6.1.1
-pluggy~=0.13.1
-iniconfig~=1.1.1
-atomicwrites~=1.4.0
-Flask~=1.1.2
-pyparsing~=2.4.7
-six~=1.15.0
-setuptools~=47.1.0
-mongoengine~=0.20.0
-packaging~=20.4
+atomicwrites==1.4.0
+attrs==20.2.0
+click==7.1.2
+colorama==0.4.4
+coverage==5.3
+dnspython==2.0.0
+Flask==1.1.2
+flask-mongoengine==0.9.5
+Flask-WTF==0.14.3
+-e git+https://github.com/wroobel88/proskell-web-side.git@3356cfdc54d5569c6fd85fa35d516576f87726cd#egg=flaskr
+importlib-metadata==2.0.0
+iniconfig==1.1.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+mongoengine==0.20.0
+mypy==0.790
+mypy-extensions==0.4.3
+packaging==20.4
+pluggy==0.13.1
+py==1.9.0
+pymongo==3.11.0
+pyparsing==2.4.7
+pytest==6.1.1
+six==1.15.0
+toml==0.10.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+Werkzeug==1.0.1
+WTForms==2.3.3
+zipp==3.4.0
