connecto to compiler

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI='mongodb+srv://asd:asd@cluster0.yan5i.mongodb.net/students?retryWrites=true&w=majority'
+COMPILER_URL=http://localhost:2000
