--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ dnspython==2.0.0
 Flask==1.1.2
 Flask-PyMongo==2.3.0
 Flask-WTF==0.14.3
--e git+https://github.com/wroobel88/proskell-web-side.git@3356cfdc54d5569c6fd85fa35d516576f87726cd#egg=flaskr
+# -e git+https://github.com/wroobel88/proskell-web-side.git@3356cfdc54d5569c6fd85fa35d516576f87726cd#egg=flaskr
 importlib-metadata==3.1.0
 iniconfig==1.1.1
 itsdangerous==1.1.0
