--- a/tasks.json
+++ b/tasks.json
@@ -6,8 +6,29 @@
             "dependsOn": [
                 "docker-build"
             ],
+            "dockerRun": {
+                "env": {
+                    "FLASK_APP": "flaskr",
+                    "FLASK_ENV": "development",
+                    "FLASK_DEBUG": "1",
+                    "FLASK_RUN_PORT": "5000"
+                },
+                "volumes": [
+                    {
+                        "containerPath": "/app",
+                        "localPath": "${workspaceFolder}"
+                    }
+                ]
+            },
             "python": {
-                "module": "flaskr"
+                "args": [
+                    "run",
+                    "--host",
+                    "0.0.0.0",
+                    "--port",
+                    "5000"
+                ],
+                "module": "flask"
             }
         }
     ]
